--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cron": "^1.8.2",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "log4js": "^6.3.0",
     "mongoose": "^5.11.10",
-    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "pluralize": "^8.0.0",
     "request": "^2.88.2",
+    "swagger-ui-express": "^4.1.6",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
