--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: server
     build: ./server
     environment:
+      ENV: ${ENV-dev}
       LOG_LEVEL: ${LOG_LEVEL-info}
       DB_URL: mongodb:27017
       DB_NAME: shortlist
